--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=reservation
 server.port=8085
+
+# Logging configuration
+logging.logstash.host=${LOGSTASH_HOST:localhost:5000}
+logging.level.root=INFO
+logging.level.com.devoops=DEBUG
+logging.level.org.springframework.web=INFO
