fix: Fix zipkin endpoint in application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ logging.level.root=INFO
 logging.level.com.devoops=DEBUG
 logging.level.org.springframework.web=INFO
 management.tracing.sampling.probability=1.0
-management.tracing.export.zipkin.endpoint=${ZIPKIN_HOST:http://zipkin}:${ZIPKIN_PORT:9411}/api/v2/spans
+management.tracing.export.zipkin.endpoint=http://${ZIPKIN_HOST:zipkin}:${ZIPKIN_PORT:9411}/api/v2/spans
