--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ logging.level.com.devoops=DEBUG
 logging.level.org.springframework.web=INFO
 management.tracing.sampling.probability=1.0
 management.tracing.export.zipkin.endpoint=http://${ZIPKIN_HOST:zipkin}:${ZIPKIN_PORT:9411}/api/v2/spans
+
+# Actuator endpoints for Prometheus metrics
+management.endpoints.web.exposure.include=health,prometheus,metrics
+management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
