feat: Add basic reservation CRUD.
Enabled reservation creation, deleting  pending reservations, and reservation fetching.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,31 @@
 spring.application.name=reservation
 server.port=${SERVER_PORT:8080}
+
 # Logging configuration
 logging.logstash.host=${LOGSTASH_HOST:localhost:5000}
 logging.level.root=INFO
 logging.level.com.devoops=DEBUG
 logging.level.org.springframework.web=INFO
+
+# Database
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:devoops-postgres}:${POSTGRES_PORT:5432}/reservation_db
+spring.datasource.username=${DB_USERNAME:reservation-service}
+spring.datasource.password=${DB_PASSWORD:reservation-service-pass}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+# Tracing configuration
 management.tracing.sampling.probability=1.0
 management.tracing.export.zipkin.endpoint=http://${ZIPKIN_HOST:zipkin}:${ZIPKIN_PORT:9411}/api/v2/spans
 
 # Actuator endpoints for Prometheus metrics
-management.endpoints.web.exposure.include=health,prometheus,metrics
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.prometheus.metrics.export.enabled=true
