feat: Add gRPC config and endpoint for overlapping

--- a/environment/.local.env
+++ b/environment/.local.env
@@ -6,3 +6,4 @@ POSTGRES_HOST=devoops-postgres
 POSTGRES_PORT=5432
 DB_USERNAME=reservation-service
 DB_PASSWORD=reservation-service-pass
+GRPC_PORT=9090
