--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ management.tracing.export.zipkin.endpoint=http://${ZIPKIN_HOST:zipkin}:${ZIPKIN_
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.prometheus.metrics.export.enabled=true
+
+# gRPC Server
+grpc.server.port=${GRPC_PORT:9090}
