feat: Add reservation request validation and reservation cancellation.

--- a/environment/.local.env
+++ b/environment/.local.env
@@ -6,4 +6,16 @@ POSTGRES_HOST=devoops-postgres
 POSTGRES_PORT=5432
 DB_USERNAME=reservation-service
 DB_PASSWORD=reservation-service-pass
+
+# gRPC Server
 GRPC_PORT=9090
+
+# gRPC Client
+ACCOMMODATION_GRPC_HOST=devoops-accommodation-service
+ACCOMMODATION_GRPC_PORT=9090
+
+# RabbitMQ
+RABBITMQ_HOST=devoops-rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=devoops
+RABBITMQ_PASSWORD=devoops123
