--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,18 @@ management.prometheus.metrics.export.enabled=true
 
 # gRPC Server
 grpc.server.port=${GRPC_PORT:9090}
+
+# gRPC Client
+grpc.client.accommodation-service.address=static://${ACCOMMODATION_GRPC_HOST:devoops-accommodation-service}:${ACCOMMODATION_GRPC_PORT:9090}
+grpc.client.accommodation-service.negotiationType=plaintext
+
+# RabbitMQ
+spring.rabbitmq.host=${RABBITMQ_HOST:devoops-rabbitmq}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:devoops}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:devoops123}
+
+# RabbitMQ routing
+rabbitmq.exchange.notification=notification.exchange
+rabbitmq.routing-key.reservation-created=notification.reservation.created
+rabbitmq.routing-key.reservation-cancelled=notification.reservation.cancelled
