feat: Add user and accommodation info fetching.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,9 +33,13 @@ management.prometheus.metrics.export.enabled=true
 # gRPC Server
 grpc.server.port=${GRPC_PORT:9090}
 
-# gRPC Client
+# gRPC Client - Accommodation Service
 grpc.client.accommodation-service.address=static://${ACCOMMODATION_GRPC_HOST:devoops-accommodation-service}:${ACCOMMODATION_GRPC_PORT:9090}
 grpc.client.accommodation-service.negotiationType=plaintext
+
+# gRPC Client - User Service
+grpc.client.user-service.address=static://${USER_GRPC_HOST:devoops-user-service}:${USER_GRPC_PORT:9090}
+grpc.client.user-service.negotiationType=plaintext
 
 # RabbitMQ
 spring.rabbitmq.host=${RABBITMQ_HOST:devoops-rabbitmq}
