--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,4 @@ spring.rabbitmq.password=${RABBITMQ_PASSWORD:devoops123}
 rabbitmq.exchange.notification=notification.exchange
 rabbitmq.routing-key.reservation-created=notification.reservation.created
 rabbitmq.routing-key.reservation-cancelled=notification.reservation.cancelled
+rabbitmq.routing-key.reservation-response=notification.reservation.response
